test/Parse/ConditionalCompilation/stmt_in_type.code
// RUN: %target-typecheck-verify-language -D FOO

// Test case for statements in #if block in types.

fn foo() {}

struct S1 { // expected-note {{in declaration of 'S1'}}
#if FOO
  return 1; // expected-error {{expected declaration}}
#elseif BAR
  foo(); // expected-error {{expected 'fn' keyword in instance method declaration}}
#endif
}
